Update requirements.txt with new packages and versions
Updated dependencies in requirements.txt, added specific versions for several packages.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 torch
 sentence-transformers
 transformers
-gradio
-aiohttp
-feedparser
-matplotlib
+uvicorn==0.30.6
+fastapi==0.115.0
+gradio==4.44.0
 numpy
-faiss-cpu
-pandas
+matplotlib
+networkx
+groq==0.9.0
+chromadb==0.5.5
+pypdf==4.3.1
+tiktoken==0.7.0
+langchain-huggingface==0.0.3
+ollama==0.3.3          
