--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch
+torch==2.0.1+cpu
 sentence-transformers
 transformers
 uvicorn==0.30.6
@@ -9,6 +9,4 @@ matplotlib
 networkx
 groq==0.9.0
 chromadb==0.5.5
-pypdf==4.3.1
 langchain-huggingface==0.0.3
-ollama==0.3.3          
