Update dependencies in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-torch
-sentence-transformers
-transformers
-uvicorn==0.30.6
 fastapi==0.115.0
+uvicorn==0.30.6
 gradio==4.44.0
-numpy
-matplotlib
-networkx
+
+torch==2.2.2
+sentence-transformers==2.7.0
+transformers==4.41.2
+
 groq==0.9.0
+
 chromadb==0.5.5
+langchain==0.2.14
+langchain-community==0.2.12
 langchain-huggingface==0.0.3
