--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-fastapi==0.115.0
+sentence-transformers
 uvicorn==0.30.6
+fastapi==0.115.0
 gradio==4.44.0
-sentence-transformers==2.7.0
-transformers==4.41.2
+numpy
 groq==0.9.0
-chromadb==0.4.24
-langchain==0.2.14
-langchain-community==0.2.12
+chromadb==0.5.5
 langchain-huggingface==0.0.3
